<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Chat">Chat</string>
    <string name="messge">New Text</string>
    <string name="text">Shawn: Hello\n</string>
    <string name="empty"></string>
    <string name="buttonText">Send</string>
    <string name="title_activity_display_post">DisplayPostActivity</string>
    <string name="main_activity_title">CS307</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">logo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">Email address is required</string>
    <string name="error_invalid_password">This password is invalid</string>

    <string name="sync_ltl">Synchronize</string>
    <string name="add_event_ltl">Add Event</string>
    <string name="event_descripton_ltl">Event Name</string>
    <string name="event_datestart_ltl">Set Start Time</string>
    <string name="event_timeend_ltl">Set End Time</string>
    <string name="add_event_str_ltl">Add</string>
    <string name="cancle_event_str_ltl">Cancel</string>
    <string name="update_event_str_ltl">Modify</string>
    <string name="del_event_str_ltl">Delete</string>
    <string name="header">Post</string>
    <string name="author">By: Shawn - score: 2</string>
    <string name="body">For sprint 2</string>

</resources>