<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
        android:nestedScrollingEnabled="true"
        android:visibility="visible">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header"
        android:id="@+id/head"
        android:nestedScrollingEnabled="false"
        android:onClick="onClick"
        android:clickable="true"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/auth"
        android:text="@string/author"
        android:layout_marginLeft="@dimen/margin_small"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/body"
        android:id="@+id/bdy"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/margin_small"
        android:visibility="gone" />

</LinearLayout>
