<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   
    <!-- DESCRIPTION -->
    <LinearLayout android:id="@+id/description_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="true">
        <EditText
            android:id="@+id/description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_gravity="bottom"
            android:minHeight="48dip"
            android:hint="@string/event_descripton_ltl"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
            android:capitalize="sentences" />
    </LinearLayout>

     <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="false">
        <Spinner
            android:id="@+id/week_choose"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:minHeight="48dip"
             />
    </LinearLayout>
    
     <LinearLayout android:id="@+id/description_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="false">
        <EditText
            android:id="@+id/timePickStart"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:minHeight="48dip"
            android:hint="@string/event_datestart_ltl"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
            android:capitalize="sentences" />
    </LinearLayout>
    
     <LinearLayout android:id="@+id/description_row"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="false">
        <EditText
            android:id="@+id/timePickEnd"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_gravity="bottom"
            android:minHeight="48dip"
            android:hint="@string/event_timeend_ltl"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
            android:capitalize="sentences" />
    </LinearLayout>
   
     <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/event_add_ltl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_style"
            android:text="@string/add_event_str_ltl" />
        
        <Button
            android:id="@+id/cancle_event_ltl"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_weight="1.0"
            android:background="@drawable/button_style"
            android:text="@string/cancle_event_str_ltl" />

        
    </LinearLayout>
     
</LinearLayout>
